--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,10 @@ develop_build:
         - echo "deb http://mil-internal-apt:8080/mirror-stretch_20190731 stretch main contrib non-free" > /etc/apt/sources.list
         - curl -fsSL http://mil-internal-apt:8080/mil_internal_apt.gpg | apt-key add -
         - apt-get update
-        - apt-get install crossbuild-essential-armhf crossbuild-essential-arm64 libc6-dev:armhf libc6-dev:arm64 build-essential:amd64 libc6-dev:amd64 -y --allow-unauthenticated
+        - apt-get install --allow-unauthenticated -y
+          crossbuild-essential-armhf libc6-dev:armhf
+          crossbuild-essential-arm64 libc6-dev:arm64
+          build-essential:amd64 libc6-dev:amd64
         - dpkg-buildpackage -us -uc -b -aarmhf
         - dpkg-buildpackage -us -uc -b -aarm64
         - dpkg-buildpackage -us -uc -b -aamd64
@@ -45,7 +48,10 @@ release_build:
         - echo "deb http://mil-internal-apt:8080/mirror-stretch_20190731 stretch main contrib non-free" > /etc/apt/sources.list
         - curl -fsSL http://mil-internal-apt:8080/mil_internal_apt.gpg | apt-key add -
         - apt-get update
-        - apt-get install crossbuild-essential-armhf crossbuild-essential-arm64 libc6-dev:armhf libc6-dev:arm64 build-essential:amd64 libc6-dev:amd64 -y --allow-unauthenticated
+        - apt-get install --allow-unauthenticated -y
+          crossbuild-essential-armhf libc6-dev:armhf
+          crossbuild-essential-arm64 libc6-dev:arm64
+          build-essential:amd64 libc6-dev:amd64
         - dpkg-buildpackage -us -uc -b -aarmhf
         - dpkg-buildpackage -us -uc -b -aarm64
         - dpkg-buildpackage -us -uc -b -aamd64
